# smfh

./: .clippy.toml  .gitignore  .rustfmt.toml  Cargo.toml  README.md  TODO.md  bar.json  clippy.toml  default.nix  example_manifest.json  flake.nix  foo.json  package.nix  rustfmt.toml
crates/smfh/: Cargo.toml
crates/smfh-cli/: Cargo.toml
crates/smfh-cli/src/: args.rs  main.rs
crates/smfh-core/: Cargo.toml  README.md
crates/smfh-core/src/: file_util.rs  lib.rs  manifest.rs
crates/smfh/src/: lib.rs
src/: args.rs  file_util.rs  main.rs  manifest.rs
tests/: default.nix
tests/all/: before.sh  inbetween.sh  manifest.json
tests/all/sources/recursiveSymlink/: DEADLINK
tests/all/sources/recursiveSymlink/dir/dir2/: DEADLINK
