[package]
name = "smfh"
version = "1.0.0"
edition = "2021"


[dependencies]
blake3 = {version = "1.8.2", features = ["mmap"] }
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1 
