[package]
name = "smfh"
version = "1.0.0"
edition = "2021"


[dependencies]
blake3 = {version = "1.8.2", features = ["mmap"] }
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simplelog = "0.12.2"

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1 


[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

arbitrary_source_item_ordering    = "allow"
expect_used                       = "allow"
implicit_return                   = "allow"
missing_docs_in_private_items     = "allow"
missing_trait_methods             = "allow"
panic                             = "allow"
panic_in_result_fn                = "allow"
question_mark_used                = "allow"
ref_patterns                      = "allow"
unwrap_in_result                  = "allow"
unwrap_used                       = "allow"
wildcard_enum_match_arm           = "allow"
