[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "1.4.0"
edition = "2024"

[workspace.dependencies]
smfh-core = { path = "./crates/smfh-core" }
blake3 = { version = "1.8.3", features = ["mmap"] }
clap = { version = "4.6.0", features = ["derive"] }
color-eyre = "0.6.5"
log = "0.4.29"
rand = "0.10.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
shellexpand = { version = "3.1.2", features = ["full", "path"] }
simplelog = "0.12.2"
tempfile = "3.27.0"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

arbitrary_source_item_ordering = "allow"
expect_used = "allow"
implicit_return = "allow"
missing_docs_in_private_items = "allow"
missing_trait_methods = "allow"
panic = "allow"
panic_in_result_fn = "allow"
question_mark_used = "allow"
ref_patterns = "allow"
unwrap_in_result = "allow"
unwrap_used = "allow"
wildcard_enum_match_arm = "allow"

# Always optimize blake3. Its SIMD assembly is 100x faster than
# unoptimized Rust.
[profile.dev.package.blake3]
opt-level = 3

[profile.release]
strip = true
opt-level = 3
lto = "fat"
codegen-units = 1
