[package]
name = "smfh-cli"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "smfh"
path = "src/main.rs"

[dependencies]
smfh-core.workspace = true
clap.workspace = true
color-eyre.workspace = true
log.workspace = true
simplelog.workspace = true
serde_json.workspace = true

[lints]
workspace = true
