[package]
name = "smfh-core"
version.workspace = true
edition.workspace = true
description = "Core library for the Sleek Manifest File Handler"
license = "AGPL-3.0-only"
repository = "https://github.com/feel-co/smfh"
publish = true
readme = "../../README.md"
keywords = ["manifest", "atomic", "symlink"]
categories = ["config"]

[dependencies]
blake3.workspace = true
color-eyre.workspace = true
log.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
shellexpand.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
