[package]
name = "smfh"
version.workspace = true
edition.workspace = true
description = "Sleek Manifest File Handler"
license = "AGPL-3.0-only"
repository = "https://github.com/feel-co/smfh"
keywords = ["manifest", "atomic", "symlink"]
categories = ["command-line-utilities"]

[dependencies]
smfh-core.workspace = true

[lints]
workspace = true
