[package]
name = "smfh"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["manifest", "atomic", "symlink"]
categories = ["command-line-utilities", "filesystem"]
readme = "../../README.md"

[dependencies]
smfh-core.workspace = true

[lints]
workspace = true
